# mlcp

./: .gitignore  Cargo.toml  LICENSE  README.md
doc/: Project Notes.txt
src/: main.rs
tests/: test.sh
