[package]
name = "mlcp"
version = "0.3.2"
edition = "2021"
authors = ["Ian Dunmore"]
description ="Music Library Crud Purge - Purges non-music files ('crud') from music libraries."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
clap = { version = "3.2.5", features = ["derive"] }
indicatif = { version = " 0.16.2" }
console = { version = "0.15.0" }
