[package]
name = "mlcp"
version = "1.0.1"
edition = "2021"
authors = ["Ian Dunmore"]
description ="Music Library Crud Purge - Purges non-music files ('crud') from music libraries."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.1"
clap = { version = "4.5.7", features = ["derive"] }
indicatif = { version = " 0.17.8" }
console = { version = "0.15.8" }
